# tec

./: Cargo.toml  README.md
src/: cmds.rs  lib.rs  main.rs
tests/: testing.rs
triangular-earth-calender-lib/: Cargo.toml
triangular-earth-calender-lib/src/: lib.rs
triangular-earth-calender-lib/tests/: testing.rs
