[package]
name = "triangular-earth-calendar"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.23", features = ["derive", "cargo"] }
dateparser = "0.2.0"
log = "0.4.20"
simplelog = "0.12.1"
thiserror = "1.0.47"
