[package]
name = "triangular-earth-calendar"
description = "An alternative timekeeping system"
license = " AGPL-3.0-or-later"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
		"triangular-earth-calender-lib",
]

[dev-dependencies]
pretty_assertions = "1.4.0"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.23", features = ["derive", "cargo"] }
dateparser = "0.2.0"
thiserror = "1.0.47"
triangular-earth-calender-lib = { path = "triangular-earth-calender-lib"}
